--- a/pharmatech/templates/base.html
+++ b/pharmatech/templates/base.html
@@ -13,7 +13,7 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
 
-    <link rel="icon" href="{% static 'images/favicons/favicon.ico' %}">
+    <link rel="icon" href="{% static 'images/logo/pharma.png' %}">
 
     {% block css %}
     <!-- Latest compiled and minified Bootstrap CSS -->
@@ -106,7 +106,7 @@
 
       {% if messages %}
           {% for message in messages %}
-              <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">{{ message }}<button type="button" class="flaot-end btn-close" data-bs-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
+              <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">{{ message }}<button type="button" class="float-end btn-close" data-bs-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
           {% endfor %}
       {% endif %}
 
@@ -167,15 +167,6 @@
 
               } );
 
-                $('.recherche th').each( function () {
-
-                  let title = $(this).text();
-                  if (title !== "")
-                  {
-                    $(this).html( '<input type="text" class="search" placeholder="Recherche '+title+'" />' );
-                  }
-
-              } );
                 $('table.display').DataTable(
                     {
                       dom:'lBfrtip',
@@ -237,7 +228,7 @@
        {% comment %}   $(document).ready(function() {
               $('form select').select2();
           });{% endcomment %}
-          $('div.form-group').addClass('my-2');
+          $('div.form-group').addClass('my-4');
           $('.card-body').css('background-color','whitesmoke');
           $('table').addClass("text-center")
           $('thead').addClass('fw-bold')
