--- a/pharmatech/templates/account/signup.html
+++ b/pharmatech/templates/account/signup.html
@@ -6,9 +6,12 @@
 {% block head_title %}{% translate "Signup" %}{% endblock %}
 
 {% block inner %}
-<h1>{% translate "Sign Up" %}</h1>
-
-<p>{% blocktranslate %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktranslate %}</p>
+  <div class="card">
+    <div class="card-header bg-success text-white">
+      <h3 >{% translate "Sign Up" %}</h3>
+    </div>
+    <div class="card-body">
+      <p>{% blocktranslate %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktranslate %}</p>
 
 <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
   {% csrf_token %}
@@ -16,7 +19,10 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <button class="btn btn-primary" type="submit">{% translate "Sign Up" %} &raquo;</button>
+  <button class="btn btn-info col-12" type="submit">{% translate "Sign Up" %} &raquo;</button>
 </form>
+
+    </div>
+  </div>
 
 {% endblock %}
