--- a/pharmatech/templates/base.html
+++ b/pharmatech/templates/base.html
@@ -72,9 +72,9 @@
             <li class="nav-item active">
               <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(actuel)</span></a>
             </li>
-            <li class="nav-item">
+          {% comment %}  <li class="nav-item">
               <a class="nav-link" href="{% url 'about' %}">About</a>
-            </li>
+            </li>{% endcomment %}
             {% if request.user.is_authenticated %}
               {% comment %}<li class="nav-item">
                 {# URL provided by django-allauth/account/urls.py #}
