--- a/pharmatech/templates/pages/catalogue/vente.html
+++ b/pharmatech/templates/pages/catalogue/vente.html
@@ -10,7 +10,7 @@ Catalogue
     <div class="col-md-12">
       <div class="card">
         <div class="card-header">
-          <span>Catalogue des médicaments</span><span class="float-end"><a href="" class="btn btn-success me-2"><i class="fa fa-list"></i> Charger une liste</a><a href="#" class="btn btn-success mx-auto" data-bs-target="#create" data-bs-toggle="modal"><i class="fa fa-plus"></i> Ajouter un médicament</a></span>
+          <span>Catalogue des médicaments</span><span class="float-end"><a href="#" class="btn btn-success mx-auto" data-bs-target="#create" data-bs-toggle="modal"><i class="fa fa-plus"></i> Ajouter un médicament</a></span>
         </div>
         <div class="card-body table-responsive">
           <table class="table table-hover table-bordered table-condensed table-striped display">
